# fftw3_pybind

./: README.md
src/: CMakeLists.txt  bindings.cpp  main.c
